fix: Replace <li> margin with gap on <ul>
Add padding to header and footer.

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -12,6 +12,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 16px;
 }
 
 .content {
@@ -27,6 +28,7 @@ body {
   background-color: rgb(238,238,238);
   display: flex;
   justify-content: space-between;
+  padding: 16px;
 }
 
 .left-links, .right-links {
@@ -60,9 +62,7 @@ a {
 
 ul {
   list-style-type: none;
-  padding-left: 0;
-}
-
-li {
-  margin: 0 12px;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
 }
